ui-router requires different controllers for each view, which is a bit rubbish really

--- a/public/app/partials/blogger.html
+++ b/public/app/partials/blogger.html
@@ -7,7 +7,7 @@
 
 <div id="existing-posts">
     <h3>Posts</h3>
-    <div ng-repeat="selected in selectedBlog | filter:searchText" class="blogs-listing">
+    <div ng-repeat="selected in selectedBlogs | filter:searchText" class="blogs-listing">
       <div class="blog-post">
         <h2 class="blog-post-title">{{selected.title}}</h2>
         <ul class="blog-post-meta">
