--- a/public/app/partials/login.html
+++ b/public/app/partials/login.html
@@ -1,4 +1,4 @@
-<h3>LOGIN</h3>
+<h3>LOGIN: <h2 ng-show="error">{{error}}</h2></h3>
 <input type="text" ng-model="user.username" />
 <input type="text" ng-model="user.password" />
 <button ng-click="login(user)">Login</button>
